--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
 
@@ -17,22 +16,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gudasi"
         tools:targetApi="31">
+
         <activity android:name=".MainActivity"/>
         <activity android:name=".LoginActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
         <activity android:name=".SplashActivity" />
         <activity android:name=".ConnectedActivity" />
         <activity android:name=".RankingActivity"/>
         <activity android:name=".UsageStatsActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".HomeActivity" />
-    </application>
 
+        <activity android:name=".ChatActivity"
+            android:windowSoftInputMode="adjustResize" />
+
+    </application>
 </manifest>
